# zarrs-cache

./: .env.example  .gitignore  BENCHMARKING.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  claude_instruction.md
.github/workflows/: ci.yml  release.yml
benches/: cache_performance.rs  s3_performance.rs
docs/: ADVANCED_FEATURES.md  DATAFLOW_ARCHITECTURE.md  DATAFLOW_DIAGRAM.md
examples/: basic_usage.rs  complete_phase3_demo.rs  defaults_demo.rs  phase2_features.rs  phase3_advanced.rs
src/: compression.rs  config.rs  error.rs  lib.rs  metrics.rs  prefetch.rs  warming.rs
src/cache/: disk.rs  hybrid.rs  memory.rs  mod.rs
src/store/: cached.rs
tests/: additional_coverage_tests.rs  cache_tests.rs  config_tests.rs  hybrid_tests.rs  integration_tests.rs  metrics_tests.rs  s3_integration.rs
tests/integration/: mod.rs  s3_tests.rs
