[package]
name = "zarrs-cache"
version = "0.1.3"
edition = "2021"
authors = ["Luthfi Imanal Satrya <luthfi.imanal.satrya@gmail.com>"]
description = "High-performance caching layer for zarrs S3 storage"
license = "MIT"
repository = "https://github.com/luhtfiimanal/zarrs-cache"
keywords = ["zarr", "cache", "s3", "storage", "performance"]
categories = ["caching", "filesystem"]

[dependencies]
# Core zarrs dependency
zarrs = "0.21"
zarrs_storage = "0.3"

# Async runtime and utilities
tokio = { version = "1.0", features = ["full"] }
tokio-util = "0.7"

# Data handling
bytes = "1.7"
serde = { version = "1.0", features = ["derive", "serde_derive"] }

# Caching
lru = "0.12"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Filesystem operations
tempfile = "3.8"


# Metrics (optional)
metrics = { version = "0.21", optional = true }

# Compression (optional) - disabled for now due to C++ dependency
# zstd = { version = "0.13", optional = true }

# Logging
tracing = "0.1"
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1.0"

# Async trait
async-trait = "0.1"

# Futures utilities
futures = "0.3"

# Constraint rayon-core to compatible version
rayon-core = "=1.12.1"

[dev-dependencies]
tokio-test = "0.4"
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3.8"
tracing-subscriber = "0.3"
dotenvy = "0.15"

[features]
default = []
integration-tests = []
s3-tests = ["integration-tests"]
metrics = ["dep:metrics"]
# compression = ["dep:zstd"]

[[bench]]
name = "cache_performance"
harness = false

[[bench]]
name = "s3_performance"
harness = false
required-features = ["s3-tests"]
